syntax = "proto3";

package agglayer.prover.v1;

service ProofGenerationService {
    rpc GenerateProof(ProofGenerationRequest) returns (ProofGenerationResponse);
}

message ProofGenerationRequest {
    bytes initial_state = 1;
    bytes batch_header = 2;
}

message ProofGenerationResponse {
    bytes proof = 1;
}

enum ProofGenerationErrorType {
    PROOF_GENERATION_ERROR_TYPE_UNSPECIFIED = 0;
    UNABLE_TO_EXECUTE_PROVER = 1;
    PROVER_FAILED = 2;
    PROOF_VERIFICATION_FAILED = 3;
    EXECUTOR_FAILED = 4;
}

message ProofGenerationError {
    bytes error = 1;
    ProofGenerationErrorType error_type = 2;
}

